force-app/main/default/objects/Program_Enrollment__c/fields/Assigned_Contact__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Contact__c</fullName>
    <label>Assigned Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>