force-app/main/default/objects/Program_Enrollment__c/fields/Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Date__c</fullName>
    <label>Referral Date</label>
    <type>Date</type>
</CustomField>