force-app/main/default/objects/Program_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>Referral Drafted</fullName><default>false</default><label>Referral Drafted</label></value>
            <value><fullName>Referral Sent</fullName><default>false</default><label>Referral Sent</label></value>
            <value><fullName>Under Review</fullName><default>false</default><label>Under Review</label></value>
            <value><fullName>Enrolled</fullName><default>false</default><label>Enrolled</label></value>
            <value><fullName>Denied</fullName><default>false</default><label>Denied</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>